fix: actions alignment

--- a/packages/intro/style.module.css
+++ b/packages/intro/style.module.css
@@ -1,8 +1,11 @@
 .intro {
   position: relative;
+  display: flex;
+  flex-direction: column;
 
   &.center {
     text-align: center;
+    align-items: center;
   }
 }
 
